Add default and profile-specific configuration files